--- a/css/styles.css
+++ b/css/styles.css
@@ -159,3 +159,19 @@ HEADER
   font-size: 1.25rem;
   padding: 1rem 1.75rem;
 }
+
+/* 
+==================
+CONTENT DIVIDER
+==================
+*/
+
+.content-divider {
+  height: 0.5rem;
+  background: linear-gradient(
+    to left,
+    var(--clr-primary),
+    #e9b949,
+    var(--clr-primary)
+  );
+}
