--- a/css/styles.css
+++ b/css/styles.css
@@ -175,3 +175,39 @@ CONTENT DIVIDER
     var(--clr-primary)
   );
 }
+
+/* 
+==================
+SKILLS
+==================
+*/
+.skills {
+  background: var(--clr-grey-10);
+}
+.skill {
+  padding: 2rem 0;
+  text-align: center;
+  transition: var(--transition);
+}
+.skill-icon {
+  font-size: 2.5rem;
+  margin-bottom: 1.25rem;
+  color: var(--clr-primary);
+  display: inline-block;
+  transition: var(--transition);
+}
+.skill-title {
+  margin-bottom: 1.25rem;
+}
+.skill-text {
+  color: var(--clr-grey-5);
+  max-width: 17rem;
+  margin: 0 auto;
+}
+.skill:hover {
+  background: var(--clr-white);
+  box-shadow: 0 2px var(--clr-primary);
+}
+.skill:hover .skill-icon {
+  transform: translateY(-5px);
+}
