Skills Columns and Clearfix

--- a/css/styles.css
+++ b/css/styles.css
@@ -115,6 +115,13 @@ p {
   background: var(--clr-primary-light);
 }
 
+.clearfix::after,
+.clearfix::before {
+  content: "";
+  clear: left;
+  display: table;
+}
+
 /* 
 ==================
 HEADER
@@ -210,4 +217,17 @@ SKILLS
 }
 .skill:hover .skill-icon {
   transform: translateY(-5px);
+}
+
+@media screen and (min-width: 576px) {
+  .skill {
+    float: left;
+    width: 50%;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .skill {
+    width: 25%;
+  }
 }
