--- a/css/styles.css
+++ b/css/styles.css
@@ -407,3 +407,18 @@ SERVICES
     /* width: 33.33% instead 30% width + 3.33% margin-right */
   }
 }
+.service-image-container {
+  position: relative;
+}
+.service-icon {
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  font-size: 2rem;
+  color: var(--clr-primary);
+  background: #beed8c;
+  padding: 0.25rem 0.6rem;
+  border-radius: 50%;
+  transform: translate(-50%, 50%);
+  border: 0.375rem solid var(--clr-grey-10);
+}
