--- a/css/styles.css
+++ b/css/styles.css
@@ -494,3 +494,31 @@ CONTACT
     width: 50%;
   }
 }
+
+/* 
+==================
+FOOTER
+==================
+*/
+.footer {
+  background: #222;
+  text-align: center;
+}
+.social-icon {
+  font-size: 1.5rem;
+  color: var(--clr-white);
+  margin-right: 1rem;
+  transition: var(--transition);
+}
+.social-icon:hover {
+  color: var(--clr-primary);
+}
+.footer-text {
+  margin-top: 1.25rem;
+  color: var(--clr-white);
+  text-transform: uppercase;
+  font-weight: 400;
+}
+.company {
+  color: var(--clr-primary);
+}
