--- a/css/styles.css
+++ b/css/styles.css
@@ -147,6 +147,22 @@ p {
 
 /* 
 ==================
+NAVBAR
+==================
+*/
+.nav-btn {
+  position: fixed;
+  top: 5%;
+  left: 5%;
+  font-size: 2.5rem;
+  color: var(--clr-primary);
+  cursor: pointer;
+  z-index: 1;
+  /* animation */
+}
+
+/* 
+==================
 HEADER
 ==================
 */
