--- a/css/styles.css
+++ b/css/styles.css
@@ -160,6 +160,59 @@ NAVBAR
   z-index: 1;
   /* animation */
 }
+/* navbar */
+.navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  /* width: 100%;
+  height: 100%; */
+  background: var(--clr-grey-10);
+  z-index: 2;
+  /* hide navbar */
+}
+.showNav {
+}
+.navbar-header {
+  text-align: right;
+  padding: 1rem;
+}
+.nav-close {
+  font-size: 2.5rem;
+  color: #f29c9c;
+  cursor: pointer;
+  transition: var(--transition);
+}
+.nav-close:hover {
+  color: #bb2525;
+}
+.nav-items {
+  list-style-type: none;
+}
+.nav-link {
+  display: block;
+  font-size: 1.5rem;
+  padding: 0.25rem 1rem;
+  color: var(--clr-grey-5);
+  text-transform: uppercase;
+  letter-spacing: var(--spacing);
+  transition: var(--transition);
+}
+.nav-link:hover {
+  background: var(--clr-primary-light);
+  color: var(--clr-primary);
+  padding-left: 1.5rem;
+  border-left: 0.25rem solid var(--clr-primary);
+}
+@media screen and (min-width: 768px) {
+  .navbar {
+    width: 30vw;
+    max-width: 20rem;
+    box-shadow: 2px 0 2px rgba(0, 0, 0, 0.2);
+  }
+}
 
 /* 
 ==================
