--- a/css/styles.css
+++ b/css/styles.css
@@ -147,6 +147,72 @@ p {
 
 /* 
 ==================
+ANIMATION
+==================
+*/
+@keyframes bounce {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(2);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+@keyframes slideFromRight {
+  0% {
+    transform: translateX(1000px);
+    opacity: 0;
+  }
+  50% {
+    transform: translateX(-200px);
+    opacity: 0.5;
+  }
+  75% {
+    transform: translateX(50px);
+    opacity: 0.75;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+@keyframes slideFromLeft {
+  0% {
+    transform: translateX(-1000px);
+    opacity: 0;
+  }
+  50% {
+    transform: translateX(+200px);
+    opacity: 0.5;
+  }
+  75% {
+    transform: translateX(-50px);
+    opacity: 0.75;
+  }
+  100% {
+    transform: translateX(0px);
+    opacity: 1;
+  }
+}
+@keyframes show {
+  0% {
+    transform: scale(1.5);
+    opacity: 0;
+  }
+  50% {
+    transform: scale(2);
+    opacity: 0.5;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+/* 
+==================
 NAVBAR
 ==================
 */
@@ -159,6 +225,7 @@ NAVBAR
   cursor: pointer;
   z-index: 1;
   /* animation */
+  animation: bounce 2s ease-in infinite;
 }
 /* navbar */
 .navbar {
@@ -244,6 +311,7 @@ HEADER
   font-family: var(--ff-secondary);
   color: var(--clr-primary);
   /* animation */
+  animation: slideFromRight 5s ease-in-out 1;
 }
 
 .banner h1 {
@@ -253,6 +321,7 @@ HEADER
   margin-top: 1.25rem;
   margin-bottom: 2rem;
   /* animation */
+  animation: slideFromLeft 5s ease-in-out 1;
 }
 
 .banner-btn {
@@ -260,6 +329,7 @@ HEADER
   outline-offset: 0.25rem;
   font-size: 1.25rem;
   padding: 1rem 1.75rem;
+  animation: show 5s linear 1;
 }
 
 /* 
